--- a/src/templates/skills.tmpl.tex
+++ b/src/templates/skills.tmpl.tex
@@ -2,10 +2,9 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-			\textbf{Languages}{: {{resume.skills.languages | join(sep=', ') }}{% raw %}}{% endraw %} \\
-			\textbf{Frameworks}{: {{resume.skills.frameworks | join(sep=', ') }}{% raw %}}{% endraw %} \\
-			\textbf{Developer Tools}{: {{resume.skills.tools | join(sep=', ') }}{% raw %}}{% endraw %} \\
-			\textbf{Databases}{: {{ resume.skills.databases | join(sep=', ') }}{% raw %}}{% endraw %}
+			{% for category in resume.skills %}
+			\textbf{% raw %}{{% endraw %}{{ category.name }}{% raw %}}{% endraw %}{: {{ category.skills | join(sep=', ') }}{% raw %}}{% endraw %} \\
+			{% endfor %}
     }}
  \end{itemize}
  {% endif -%}
